--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Manrope:wght@200..800&display=swap");
+@import url("./Global/Styles/root.scss");
 
 :root {
   --main-background-color: #202733;
