Adding API call in the Context file

--- a/src/modules/Home/pages/HomePage.scss
+++ b/src/modules/Home/pages/HomePage.scss
@@ -18,6 +18,7 @@
     color: var(--neon-green-color);
     font-weight: bolder;
     font-size: 13px;
+    margin-top: 8px;
     letter-spacing: 4.09px;
   }
 
@@ -28,7 +29,8 @@
     font-weight: bolder;
     text-align: center;
     letter-spacing: -0.3px;
-    text-indent: 10px;
+    text-indent: 4px;
+    overflow: hidden;
   }
 
   &__sep {
